// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphSearch should match snapshot when isFirstQuery false 1`] = `
<Connect
  actions={Object {}}
  entrySearchResultsByPage={
    Object {
      "0": Object {
        "id": "1",
      },
      "1": Object {
        "id": "3",
      },
    }
  }
  entrySearchValue="road"
  isFirstQuery={false}
  isSearchLoading={false}
  mapToProps={[Function]}
  searchPageSelected={0}
>
  <Component />
</Connect>
`;

exports[`GraphSearch should match snapshot when isFirstQuery true and search page selected with no values 1`] = `
<Connect
  actions={Object {}}
  entrySearchResultsByPage={
    Object {
      "0": Object {
        "id": "1",
      },
      "1": Object {
        "id": "3",
      },
    }
  }
  entrySearchValue="road"
  isFirstQuery={true}
  isSearchLoading={false}
  mapToProps={[Function]}
  searchPageSelected={2}
>
  <Component />
</Connect>
`;

exports[`GraphSearch should match snapshot when isFirstQuery true and search page selected with values 1`] = `
<Connect
  actions={Object {}}
  entrySearchResultsByPage={
    Object {
      "0": Object {
        "id": "1",
      },
      "1": Object {
        "id": "3",
      },
    }
  }
  entrySearchValue="road"
  isFirstQuery={true}
  isSearchLoading={false}
  mapToProps={[Function]}
  searchPageSelected={0}
>
  <Component />
</Connect>
`;

exports[`GraphSearch should match snapshot when isSearchLoading false 1`] = `
<Connect
  actions={Object {}}
  entrySearchResultsByPage={
    Object {
      "0": Object {
        "id": "1",
      },
      "1": Object {
        "id": "3",
      },
    }
  }
  entrySearchValue="road"
  isFirstQuery={false}
  isSearchLoading={true}
  mapToProps={[Function]}
  searchPageSelected={0}
>
  <Component />
</Connect>
`;
